Fix the heart favourite burst alignment in the single post view

--- a/src/micro-interactions/_heart.scss
+++ b/src/micro-interactions/_heart.scss
@@ -77,7 +77,8 @@ html.no-reduce-motion
   .detailed-status__action-bar
   .icon-button.star-icon.activate
   .icon-star {
-  left: -29px;
+  left: -37px;
+  top: -40px;
 }
 
 @media (width <= 890px) {
